--- a/src/elements/button/style.module.css
+++ b/src/elements/button/style.module.css
@@ -5,11 +5,15 @@
   align-items: center;
   padding: 6px 10px;
   gap: 5px;
-  background: #FFBA00;
+  background: var(--c-theme);
   border-radius: 999px;
   border: none;
   font-weight: 700;
   font-size: 10px;
   line-height: 11px;
   color: #5B5B5B;
+  cursor: pointer;
+}
+.button svg {
+  font-size: 16px;
 }
